# pytest-dbt-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HOWTORELEASE.md  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: workflow.yml
docs/source/: conf.py  configuration.rst  dbt_spark.rst  index.rst  projects.rst
docs/source/_static/dbt_project/: dbt_project.yml  packages.yml
docs/source/_static/dbt_project/macros/: normalize_column_names.sql  spark_adapter.sql
docs/source/_static/dbt_project/tests/: test_normalize_column_names.py  test_normalize_columns_names.py
docs/source/_static/tests/: test_spark_get_tables.py
scripts/: release.py
src/pytest-dbt-core/: _version.py
src/pytest_dbt_core/: __init__.py  _version.py  fixtures.py  plugin.py  session.py
tests/: test_session.py
tests/dbt_project/: profiles.yml
tests/dbt_project/macros/: fetch_single_statement.sql  prices.sql
tests/dbt_project/tests/: test_fetch_single_statement.py  test_prices.py
